--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -1,6 +1,33 @@
 @import './variable.less';
 
 body {
+  .ant-btn-default {
+    color: @color !important;
+    background-color: @bg !important;
+    box-shadow: none;
+    transition: @transition;
+    border-color: @border;
+    &:hover {
+      box-shadow:
+        0 6px 16px 0 var(--current-border),
+        0 3px 6px -4px var(--current-border),
+        0 9px 28px 8px var(--current-border);
+    }
+  }
+  .ant-btn-primary {
+    color: @primaryColor !important;
+    background-color: @bg !important;
+    box-shadow: none;
+    transition: @transition;
+    border-color: fade(@primaryColor, 60%);
+
+    &:hover {
+      box-shadow:
+        0 6px 16px 0 fade(@primaryColor, 20%),
+        0 3px 6px -4px fade(@primaryColor, 20%),
+        0 9px 28px 8px fade(@primaryColor, 20%);
+    }
+  }
   .ant-modal {
     .ant-modal-confirm-paragraph {
       .ant-modal-confirm-title {
@@ -300,6 +327,26 @@ body {
         background: @bg;
         color: @color;
         transition: @transition;
+        border-color: @border !important;
+
+        .ant-table-header {
+          .ant-table-thead {
+            .ant-table-cell {
+              color: @color;
+              transition: @transition;
+              background: @bg;
+            }
+          }
+        }
+        .ant-table-cell {
+          border-color: @border !important;
+          transition: @transition;
+          color: @color;
+          transition: @transition;
+        }
+        .ant-table-cell-row-hover {
+          background: fade(@primaryColor, 30%);
+        }
       }
     }
   }
