--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -12,11 +12,11 @@
   // 亮色背景色
   --bg-color: #fff;
   //暗色背景色
-  --bg-color2: #242727;
+  --bg-color2: #343737;
 
   --bg--transparent: rgba(0, 0, 0, 0.1);
   --border-color: #e1e4e8;
-  --border-color2: #1e1b18;
+  --border-color2: #1e1b1a;
 
   --current-color: var(--text-color);
   --current-bg: var(--bg-color);
