fix: 表格为空时适配夜间模式

--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -344,6 +344,18 @@ body {
             }
           }
         }
+        .ant-table-placeholder {
+          background: @bg;
+          transition: @transition;
+          color: var(--text-color1);
+
+          &:hover > td {
+            background: @bg;
+          }
+          .ant-empty-description {
+            color: var(--text-color1);
+          }
+        }
         .ant-table-cell {
           border-color: @border !important;
           transition: @transition;
