--- a/src/components/Comment/styles.less
+++ b/src/components/Comment/styles.less
@@ -30,6 +30,7 @@
     margin-top: 16px;
     margin-left: @leftWidth;
     background-color: var(--bg--transparent);
+    transition: @transition;
     padding: 16px;
     border-radius: 8px;
 
@@ -37,6 +38,7 @@
       font-size: 16px;
       letter-spacing: 2px;
       color: @color;
+      transition: @transition;
       .replyName {
         color: @primaryColor;
         cursor: pointer;
