--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -165,6 +165,11 @@ body {
         color: @primaryColor !important;
       }
     }
+    .ant-select-item-option-disabled {
+      .ant-select-item-option-content {
+        color: var(--text-color1) !important;
+      }
+    }
   }
   .ant-tooltip {
     .ant-tooltip-content {
