--- a/public/mdStyles/three-hero.less
+++ b/public/mdStyles/three-hero.less
@@ -344,7 +344,7 @@
     border: solid 1px #f6f6f6;
 
     thead {
-      background: #f6f6f6;
+      background: #f6f6f633;
       color: #000;
       text-align: left;
     }
