--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -271,6 +271,9 @@ body {
               transition: @transition;
             }
           }
+          .ant-switch-handle {
+            background: transparent;
+          }
           [class$='-suffix'] {
             // color: @color;
             transition: @transition;
