--- a/src/components/ArticleTable/styles.less
+++ b/src/components/ArticleTable/styles.less
@@ -1,40 +1,82 @@
 @import '../../styles/variable.less';
 
 .table {
-  background: transparent;
+  background: transparent !important;
 
   :global {
     .ant-table {
-      background: transparent !important;
-      color: #fff;
-    }
-    .ant-table-placeholder {
-      background: transparent !important;
-      .ant-table-cell {
-        background: transparent !important;
-      }
-      .ant-empty-description {
-        color: var(--text-color1) !important;
-      }
-      &:hover {
-        background: transparent !important;
-      }
-    }
-    .ant-table-content {
-      > table {
-        border-radius: 0;
+      scrollbar-color: fade(@primaryColor, 30%) transparent;
+      scrollbar-width: thin;
+
+      background: @bg;
+      transition: @transition;
+      .ant-table-title {
+        background: @bg;
+        transition: @transition;
+        border-color: @border !important;
+        color: @color;
       }
 
-      .ant-table-cell-row-hover {
-        background: transparent !important;
-        cursor: pointer;
+      .ant-table-container {
+        background: @bg;
+        color: @color;
+        transition: @transition;
+        border-color: @border !important;
+
+        .ant-table-header {
+          .ant-table-thead {
+            .ant-table-cell {
+              color: @color;
+              transition: @transition;
+              background: @bg;
+            }
+          }
+        }
+        .ant-table-placeholder {
+          background: @bg;
+          transition: @transition;
+          color: var(--text-color1);
+
+          &:hover > td {
+            background: @bg;
+          }
+          .ant-empty-description {
+            color: var(--text-color1);
+          }
+        }
+        .ant-table-cell,
+        .ant-table-cell-fix-left {
+          border-color: @border !important;
+          transition: @transition;
+          color: @color;
+          transition: @transition;
+        }
+        .ant-table-cell-row-hover {
+          background: fade(@primaryColor, 30%);
+        }
+
+        .ant-table-content {
+          .ant-table-tbody {
+            .ant-table-cell {
+              .ant-table-row-expand-icon {
+                background: @bg;
+                transition: @transition;
+                color: @color;
+                border-color: @border;
+              }
+            }
+          }
+        }
       }
-      .ant-table-cell {
-        border-bottom: none;
-      }
-      .ant-table-cell-fix-left {
-        background: transparent !important;
-        cursor: pointer;
+
+      .ant-table-thead {
+        .ant-table-cell {
+          background: @bg;
+          transition: @transition;
+          &::before {
+            background: @border !important;
+          }
+        }
       }
     }
   }
