--- a/src/pages/user/styles.less
+++ b/src/pages/user/styles.less
@@ -11,8 +11,8 @@
     width: 80vw;
     height: 80vh;
     background-color: var(--bg--transparent);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     border-radius: 4vmin;
     padding: 3vmin;
     transition: @transition;
@@ -26,6 +26,12 @@
     .tabs {
       height: 100%;
       :global {
+        .ant-tabs-content {
+          height: 100%;
+        }
+        .ant-tabs-tabpane {
+          height: 100%;
+        }
         .ant-tabs-tab-active {
           .ant-tabs-tab-btn {
             color: @primaryColor;
