fix: 删除文章功能

--- a/src/components/ArticleTable/styles.less
+++ b/src/components/ArticleTable/styles.less
@@ -2,6 +2,10 @@
 
 .table {
   background: transparent !important;
+  .title {
+    color: @primaryColor;
+    cursor: pointer;
+  }
 
   :global {
     .ant-table {
